; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/screensavers/matrix/extr_matrix.c_crc_rand.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/screensavers/matrix/extr_matrix.c_crc_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_crc_reg = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crc_rand() #0 {
  %1 = alloca i32, align 4
  store i32 46080, i32* %1, align 4
  %2 = load i32, i32* @_crc_reg, align 4
  %3 = and i32 %2, 1
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i32, i32* @_crc_reg, align 4
  %7 = ashr i32 %6, 1
  %8 = xor i32 %7, 46080
  store i32 %8, i32* @_crc_reg, align 4
  br label %12

9:                                                ; preds = %0
  %10 = load i32, i32* @_crc_reg, align 4
  %11 = ashr i32 %10, 1
  store i32 %11, i32* @_crc_reg, align 4
  br label %12

12:                                               ; preds = %9, %5
  %13 = load i32, i32* @_crc_reg, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
